[package]
name = "actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0.1"
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = {version = "0.4.19", features = ["serde"]}
derive-new = "0.5.9"
env_logger = "0.9.0"
futures = "0.3.21"
getset = "0.1.2"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.17.0"
